<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_refresh_waller_balance_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/root_padding_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/transaction_record_textview_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/generate_address_margin_bottom_titles"
                android:background="@drawable/record_transaction_selector"
                android:padding="7dp"
                android:text="@string/record_transaction"
                android:textColor="@color/accent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <nicolasdubiansky.bitcoin.custom_views.AddressView
                android:id="@+id/address_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/generate_address_margin_bottom_titles"
                android:text="@string/bitcoin_currency"
                android:textStyle="italic" />


            <TextView
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partial_balance" />

            <TextView
                android:id="@+id/partial_balance_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/generate_address_margin_bottom_titles"
                android:text="-"
                android:textSize="16sp" />

            <TextView
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uncofirmed_balance" />

            <TextView
                android:id="@+id/unconfirmed_balance_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/generate_address_margin_bottom_titles"
                android:text="-"
                android:textSize="16sp"

                />

            <TextView
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance" />

            <TextView
                android:id="@+id/total_balance_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="16sp" />

        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/receive_money_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:src="@drawable/money_icon"
            app:elevation="4dp"
            app:fabSize="normal" />


    </FrameLayout>

</android.support.v4.widget.SwipeRefreshLayout>